fix(selection-list): too short input field

--- a/src/app/shared/selection-list/list-item/list-item.component.scss
+++ b/src/app/shared/selection-list/list-item/list-item.component.scss
@@ -93,10 +93,12 @@
     color: var(--color-text-200);
   }
 
+  flex: 1;
   background: transparent;
   border: none;
   min-width: 0;
   padding: 0;
+  text-overflow: ellipsis;
   outline: none;
 }
 
